# faust

./: .gitignore  Cargo.toml  Changes.md  README.md  Trunk.toml  askama.toml  build.rs  descr_mercenaries.pest  descr_regions.pest  descr_sm_factions.og.pest  descr_sm_factions.rr.pest  descr_strat.pest  export_descr_buildings.pest  export_descr_unit.pest  index.html  strings.pest
.cargo/: audit.toml
.github/actions/artifact/download/: action.yml
.github/actions/artifact/download-executable/: action.yml
.github/actions/artifact/upload/: action.yml
.github/actions/cf-pages/: action.yml
.github/actions/deployment/finish/: action.yml
.github/actions/deployment/start/: action.yml
.github/actions/download-mod-data/: action.yml
.github/actions/faust/: action.yml
.github/actions/gh-pages/: action.yml
.github/actions/mount-mod/: action.yml
.github/actions/publish-rust-artifacts/: action.yml
.github/actions/rust-build/: action.yml
.github/actions/vt-scan/: action.yml
.github/workflows/: audit-nightly.yml  audit-on-push.yml  audit.yml  build.yml  check.yml  checks.yml  cleanup.yml  docs.yml  release.yml  test.yml
assets/styles/: colors.scss  components.scss  fonts.scss  main.scss
assets/styles/components/: faction-page.scss  mod-list.scss  module-list.scss  module-page.scss
docs/: CNAME  index.html  styles.css
docs/previews/: index.html
examples/: faust.yml
silphium/: Cargo.toml  Trunk.toml  index.html
silphium/assets/styles/: _colors.scss  _components.scss  _fonts.scss  components.scss  fonts.scss  main.scss  solarized.scss
silphium/assets/styles/components/: _faction-header.scss  _faction-page.scss  _faction-roster.scss  _footer.scss  _help-dialog.scss  _mercenary-roster.scss  _module-list.scss  _module-page.scss  _pool-info.scss  _popover.scss  _unit-card.scss  faction-roster.scss  mercenary-roster.scss  unit-card.scss
silphium/src/: lib.rs  model.rs  modules.rs  routes.rs
silphium/src/components/: faction_page.rs  faction_roster.rs  help-data.cbor  help-unit.cbor  help_dialog.rs  mercenary_page.rs  mercenary_roster.rs  mod.rs  module_list.rs  module_page.rs  regional_roster.rs  roster_filter.rs  unit_card.rs  unit_filter.rs
silphium/src/components/core/: back_link.rs  button.rs  icon.rs  mod.rs  option_group.rs  text.rs  toggle_button.rs
silphium/src/hooks/: mod.rs  model_handle.rs
src/: args.rs  env.rs  main.rs  mod_folder.rs  modules.rs  pack.rs  routes.rs  serve.rs  templates.rs  utils.rs
src/components/: faction_page.rs  faction_roster.rs  mod.rs  module_list.rs  module_page.rs
src/components/core/: back_link.rs  link.rs
src/parse/: descr_cultures.rs  descr_mercenaries.rs  descr_model_battle.rs  descr_mount.rs  descr_regions.rs  descr_strat.rs  error.rs  eval.rs  export_descr_buildings.rs  export_descr_unit.rs  manifest.rs  mod.rs  model.rs  requires.pest  sd.rs  text.rs  utils.rs
src/parse/descr_mercenaries/: lexer.rs  mod.rs  parser.lalrpop
src/parse/descr_regions/: lexer.rs  mod.rs  parser.lalrpop
src/parse/descr_sm_factions/: lexer.rs  mod.rs  og.rs  parser.og.lalrpop  parser.rr.lalrpop  rr.rs
src/parse/export_descr_buildings/: lexer.rs  mod.rs  parser.lalrpop
src/parse/export_descr_unit/: lexer.rs  mod.rs  parser.lalrpop
src/parse/text/: bin.rs  lexer.rs  mod.rs  parser.lalrpop  token.rs  txt.rs
src/platform/: mod.rs  nix.rs  windows.rs
src/render/: mod.rs  renderer.rs  templates.rs
templates/: preload.html  redirect.html
