[workspace]

[package]
name = "faust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
silphium = { path="silphium" }
gloo = { version = "0.11.0", default-features = false, features = ["console", "net"] }
implicit-clone = { version = "0.5.1", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
yew = { git = "https://github.com/rmartinho/yew.git", features = ["ssr"] }
yew-autoprops = "0.4.1"
yew-router = { git = "https://github.com/rmartinho/yew.git" }
cargo-emit = "0.2.1"

[build-dependencies]
cargo-emit = "0.2.1"
