[workspace]

[package]
name = "faust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
silphium = { path = "silphium" }
implicit-clone = { version = "0.5.1", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "fs"] }
yew = { version = "0.21.0", features = ["ssr"] }
yew-router = "0.18.0"
cargo-emit = "0.2.1"
askama = "0.14.0"
serde_yml = "0.0.12"
clap = { version = "4.5.41", features = ["derive"] }
logos = "0.15.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
image = "0.25.6"
indicatif = { version = "0.18.0", features = ["futures"] }
console = "0.16.0"
zip-dir = "0.1.0"
tempdir = "0.3.7"
copy_dir = "0.1.3"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
clipboard-rs = "0.3.0"

[target.'cfg(windows)'.dependencies]
dont_disappear = "3.0.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs", "Win32_UI_WindowsAndMessaging"] }
windows-strings = "0.4.2"

[build-dependencies]
cargo-emit = "0.2.1"
lalrpop = "0.22.2"
winresource = "0.1"

[patch.crates-io]
yew = { git = 'https://github.com/rmartinho/yew.git' }
yew-router = { git = 'https://github.com/rmartinho/yew.git' }
