[workspace]

[package]
name = "faust"
version = "0.4.0"
edition = "2024"
build = "build.rs"

[dependencies]
silphium = { path = "silphium" }
implicit-clone = { version = "0.5.1", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "fs"] }
yew = { version = "0.21.0", features = ["ssr"] }
yew-router = "0.18.0"
cargo-emit = "0.2.1"
askama = "0.14.0"
serde_yml = "0.0.12"
clap = { version = "4.5.41", features = ["derive"] }
image = "0.25.6"
indicatif = { version = "0.18.0", features = ["futures"] }
console = "0.16.0"
copy_dir = "0.1.3"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
clipboard-rs = "0.3.0"
anyhow = "1.0.98"
serde_json5 = "0.2.1"
itertools = "0.14.0"
pest = "2.8.1"
pest_derive = "2.8.1"
thiserror = "2.0.12"
ciborium = "0.2.2"
serde_json = "1.0.142"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }

[target.'cfg(windows)'.dependencies]
dont_disappear = "3.0.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs", "Win32_UI_WindowsAndMessaging"] }
windows-strings = "0.4.2"

[build-dependencies]
cargo-emit = "0.2.1"
winresource = "0.1"
trunk = { git = "https://github.com/rmartinho/trunk-lib.git" }
tokio = { version = "1" }

[patch.crates-io]
yew = { git = "https://github.com/rmartinho/yew.git" }
yew-router = { git = 'https://github.com/rmartinho/yew.git' }
