[package]
name = "silphium"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
hydration = ["yew/hydration"]

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["console", "net"] }
implicit-clone = { version = "0.5.1", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
yew = { git = "https://github.com/rmartinho/yew.git", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-router = { git = "https://github.com/rmartinho/yew.git" }
